kubernetes-manifests/freelingo/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: freelingo-frontend
  namespace: freelingo
  labels:
    app: freelingo-frontend
spec:
  type: ClusterIP
  selector:
    app: freelingo-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: freelingo-backend
  namespace: freelingo
  labels:
    app: freelingo-backend
spec:
  type: ClusterIP
  selector:
    app: freelingo-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: freelingo-db
  namespace: freelingo
  labels:
    app: freelingo-db
spec:
  type: ClusterIP
  selector:
    app: freelingo-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      name: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: freelingo-redis
  namespace: freelingo
  labels:
    app: freelingo-redis
spec:
  type: ClusterIP
  selector:
    app: freelingo-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
      name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: freelingo
  labels:
    app: freelingo-backend
spec:
  type: ClusterIP
  selector:
    app: freelingo-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
